--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
             };
             
             // Send email using EmailJS
-            emailjs.send('service_nfi3cm9', 'template_m3ogbmb', formData)
+            emailjs.send('service_nfi3cm9', 'template_etos9fb', formData)
                 .then(() => {
                     showToast('Message sent successfully!', true);
                     contactForm.reset();
