--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         Hi, I'm <span class="text-accent">Pavan Patil</span>
                     </h1>
                     <h2 class="text-2xl md:text-4xl font-semibold mt-4 text-gray-300">
-                        Full Stack Developer & AI Specialist
+                        Full Stack Developer & MERN
                     </h2>
                     <p class="mt-6 text-lg text-gray-300 max-w-2xl">
                         Passionate about creating responsive, user-friendly websites with modern design principles and
@@ -773,7 +773,7 @@
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="text-center md:text-left mb-6 md:mb-0">
                     <h3 class="text-xl font-bold text-accent">Pavan Patil</h3>
-                    <p class="text-gray-400 mt-2">Full Stack Developer & AI Specialist</p>
+                    <p class="text-gray-400 mt-2">Full Stack Developer & MERN</p>
                 </div>
                 <div class="flex space-x-6">
                     <a href="mailto:pavanpatil8023@gmail.com"
