--- a/index.html
+++ b/index.html
@@ -263,6 +263,11 @@
                             View Portfolio
                         </a>
                     </div>
+                    <div class="mt-6 flex flex-wrap gap-4 w-full">
+                        <a href="resume.html" class="w-80 px-6 py-3 border border-accent text-center rounded-lg font-medium hover:bg-accent hover:text-white transition duration-300">
+                            See Resume
+                        </a>
+                    </div>
                     <div class="mt-12 flex space-x-6">
                         <a href="mailto:pavanpatil8023@gmail.com"
                             class="text-gray-300 hover:text-accent transition duration-300">
