--- a/resume.html
+++ b/resume.html
@@ -2,280 +2,100 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pavan Patil - Resume</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        body {
-            background: #f5f7fa;
-            color: #333;
-            line-height: 1.6;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 30px auto;
-            background: white;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
-        }
-
-        /* Header Styles */
-        header {
-            background: #2c3e50;
-            color: white;
-            padding: 30px 40px;
-        }
-
-        h1 {
-            font-size: 2.4rem;
-            margin-bottom: 5px;
-            letter-spacing: 1.5px;
-        }
-
-        .contact {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 15px;
-            margin-top: 10px;
-        }
-
-        .contact-item {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            font-size: 0.9rem;
-        }
-
-        /* Section Styles */
-        section {
-            padding: 25px 40px;
-            border-bottom: 1px solid #eee;
-        }
-
-        h2 {
-            color: #2c3e50;
-            margin-bottom: 15px;
-            padding-bottom: 8px;
-            border-bottom: 2px solid #3498db;
-            font-size: 1.4rem;
-        }
-
-        h3 {
-            color: #2980b9;
-            margin: 12px 0 5px;
-        }
-
-        /* Summary */
-        .summary {
-            text-align: justify;
-        }
-
-        /* Experience & Education */
-        .date {
-            color: #7f8c8d;
-            font-style: italic;
-            margin-bottom: 5px;
-        }
-
-        /* Skills */
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 15px;
-        }
-
-        .skill-category h4 {
-            margin: 10px 0 5px;
-            color: #16a085;
-        }
-
-        ul {
-            padding-left: 20px;
-            margin-bottom: 10px;
-        }
-
-        /* Projects */
-        .project {
-            margin-bottom: 15px;
-        }
-
-        /* Button */
-        .download-btn {
-            display: block;
-            width: 220px;
-            margin: 30px auto;
-            padding: 12px;
-            background: #27ae60;
-            color: white;
-            text-align: center;
-            text-decoration: none;
-            border-radius: 5px;
-            font-weight: 600;
-            transition: all 0.3s;
-        }
-
-        .download-btn:hover {
-            background: #219653;
-            transform: translateY(-2px);
-        }
-
-        @media print {
-            .download-btn {
-                display: none;
-            }
-
-            body {
-                background: white;
-            }
-
-            .container {
-                box-shadow: none;
-                margin: 0;
-            }
-        }
-
-        .back-link {
-    height: 10%;
-    width: 100%;
-    margin: 20px;
-    padding: 20px;
-    text-align: center;
-    font-size: 1.25rem;
-    color: #4a4a4a;
-    background: linear-gradient(135deg, #d0e6ff, #a4c8f0);
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0, 140, 255, 0.2);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    animation: glow 3s infinite alternate;
-}
-
-.back-link a {
-    text-decoration: none;
-    color: #007BFF;
-    font-weight: bold;
-}
-
-.back-link a:hover {
-    text-decoration: underline;
-    color: #0056b3;
-}
-
-@keyframes glow {
-    0% {
-        box-shadow: 0 4px 12px rgba(0, 140, 255, 0.2);
-        transform: scale(1);
-    }
-    100% {
-        box-shadow: 0 6px 20px rgba(0, 140, 255, 0.4);
-        transform: scale(1.02);
-    }
-}
-
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pavan Patil - Resume Viewer</title>
+  <!-- Tailwind CSS CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-    <div class="back-link">
-    <a href="index.html">Back to Home</a>
-</div>
-
-    <div class="container">
-        <header>
-            <h1>PAVAN PATIL</h1>
-            <div class="contact">
-                <div class="contact-item">📍 AT Kurukali TQ-Kagal. Kolhapur</div>
-                <div class="contact-item">📞 +91 9322108023</div>
-                <div class="contact-item">✉️ pavanpatil8023@gmail.com</div>
-                <div class="contact-item">🌐 pavanpatil8023.netlify.app</div>
-            </div>
-        </header>
-
-        <section class="summary">
-            <h2>SUMMARY</h2>
-            <p>BCA graduate specializing in web development with expertise in Full Stack development and AI tools.
-                Proven ability to create responsive, user-friendly websites using modern tech stack. Experienced in
-                Firebase, payment gateways, and real-time databases. Strong problem-solver committed to continuous
-                learning.</p>
-        </section>
-
-        <section class="experience">
-            <h2>WORK EXPERIENCE</h2>
-            <h3>Web Developer Intern, Electrotech Automation</h3>
-            <div class="date">October 2024 - December 2024</div>
-            <p>Designed dynamic websites using HTML/CSS/JavaScript and Bootstrap. Integrated EmailJS for forms. Focused
-                on responsive design and optimized user experiences.</p>
-        </section>
-
-        <section class="education">
-            <h2>EDUCATION</h2>
-            <h3>Bachelor of Computer Application</h3>
-            <p>KLE Society’s College of BCA Nipani</p>
-            <div class="date">Sept 2022 - July 2025</div>
-
-            <h3>Senior Secondary School</h3>
-            <p>Dexchand College Arjunnagar, Nipani</p>
-            <div class="date">June 2020 - April 2022</div>
-        </section>
-
-        <section class="skills">
-            <h2>SKILLS</h2>
-            <div class="skills-grid">
-                <div>
-                    <h4>Technical</h4>
-                    <ul>
-                        <li>HTML/CSS, JavaScript, Python</li>
-                        <li>React, Node.js, Tailwind</li>
-                        <li>Firebase, MySQL, MongoDB</li>
-                        <li>REST APIs, Payment Gateways</li>
-                    </ul>
-
-                    <h4>Languages</h4>
-                    <ul>
-                        <li>English, Marathi, Hindi</li>
-                    </ul>
-                </div>
-                <div>
-                    <h4>Soft Skills</h4>
-                    <ul>
-                        <li>Communication & Creativity</li>
-                        <li>Team Collaboration</li>
-                        <li>Time Management</li>
-                        <li>Problem Solving</li>
-                    </ul>
-
-                    <h4>Tools</h4>
-                    <ul>
-                        <li>Git/GitHub, Figma, VS Code</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-
-        <section class="projects">
-            <h2>KEY PROJECTS</h2>
-            <div class="project">
-                <h3>Sports Eligibility Platform</h3>
-                <p>Payment-based athlete eligibility system with coach database (22 states)</p>
-            </div>
-            <div class="project">
-                <h3>Women's Empowerment Portal</h3>
-                <p>Hackathon project for stores, profiles & job opportunities</p>
-            </div>
-            <div class="project">
-                <h3>Travel Expense Tracker</h3>
-                <p>Real-time expense manager with currency conversion</p>
-            </div>
-        </section>
-
-        <a href="#" class="download-btn" onclick="window.print()">Download Resume (PDF)</a>
+<body class="bg-gray-100 min-h-screen flex flex-col items-center p-6">
+  <!-- Back to Home Button -->
+  <div class="w-full max-w-md mb-6">
+    <div class="bg-gradient-to-r from-blue-200 to-blue-400 rounded-xl shadow-md p-4 text-center animate-pulse">
+      <a href="index.html" class="text-blue-700 font-semibold hover:underline">&larr; Back to Home</a>
     </div>
+  </div>
+
+  <!-- View Resume Button -->
+  <button id="viewResumeBtn" class="mb-6 px-6 py-3 bg-green-500 text-white rounded-lg shadow hover:bg-green-600 focus:outline-none transition">
+    View Resume
+  </button>
+
+  <!-- Resume Container (Initially Hidden) -->
+  <div id="resumeContainer" class="w-full max-w-3xl bg-white rounded-xl shadow-lg overflow-hidden transform transition-all duration-500 ease-in-out opacity-0 scale-95 pointer-events-none relative">
+    <!-- Window Controls (header) -->
+    <div id="windowHeader" class="flex justify-between items-center bg-green-500 text-white p-2 cursor-default">
+      <h2 class="text-lg font-semibold ml-2">Pavan Patil's Resume</h2>
+      <div class="flex space-x-2 mr-2">
+        <!-- Minimize -->
+        <button id="minimizeBtn" class="p-1 hover:bg-green-600 rounded" title="Minimize">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14" />
+          </svg>
+        </button>
+        <!-- Close -->
+        <button id="closeBtn" class="p-1 hover:bg-red-600 rounded" title="Close">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+          </svg>
+        </button>
+      </div>
+    </div>
+    <!-- Embed PDF -->
+    <div id="pdfContent" class="p-4">
+      <embed src="Pavan%20Resume.pdf" type="application/pdf" class="w-full h-96" />
+    </div>
+    <!-- Download Button -->
+    <div id="downloadSection" class="p-4 text-right">
+      <a href="Pavan%20Resume.pdf" download class="px-4 py-2 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700 transition">
+        Download PDF
+      </a>
+    </div>
+  </div>
+
+  <!-- Toggle Script -->
+  <script>
+    const btn = document.getElementById('viewResumeBtn');
+    const container = document.getElementById('resumeContainer');
+    const closeBtn = document.getElementById('closeBtn');
+    const minimizeBtn = document.getElementById('minimizeBtn');
+    const maximizeBtn = document.getElementById('maximizeBtn');
+    const pdfContent = document.getElementById('pdfContent');
+    const downloadSection = document.getElementById('downloadSection');
+    const header = document.getElementById('windowHeader');
+
+    // Open the resume modal
+    btn.addEventListener('click', () => {
+      container.classList.remove('opacity-0', 'scale-95', 'pointer-events-none');
+      container.classList.add('opacity-100', 'scale-100');
+    });
+
+    // Close the resume modal
+    closeBtn.addEventListener('click', () => {
+      container.classList.add('opacity-0', 'scale-95', 'pointer-events-none');
+      container.classList.remove('opacity-100', 'scale-100', 'fixed', 'inset-0', 'm-0', 'rounded-none', 'z-50');
+      // Ensure content is visible when reopened
+      pdfContent.classList.remove('hidden');
+      downloadSection.classList.remove('hidden');
+    });
+
+    // Minimize: toggle content visibility
+    minimizeBtn.addEventListener('click', () => {
+      pdfContent.classList.toggle('hidden');
+      downloadSection.classList.toggle('hidden');
+    });
+
+    // Maximize: expand to full screen on click
+    maximizeBtn.addEventListener('click', () => {
+      container.classList.add('fixed', 'inset-0', 'm-0', 'rounded-none', 'z-50');
+    });
+
+    // Restore: double-click on header area to revert size
+    header.addEventListener('dblclick', () => {
+      container.classList.remove('fixed', 'inset-0', 'm-0', 'rounded-none', 'z-50');
+    });
+  </script>
 </body>
 
 </html>
