--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                         <div class="flex justify-between items-start">
                             <div>
                                 <h3 class="text-xl font-bold text-text">Senior Secondary School</h3>
-                                <p class="text-accent font-medium">Dexchand College Arjunnagar, Nipani</p>
+                                <p class="text-accent font-medium">Devchand College Arjunnagar, Nipani</p>
                             </div>
                             <span class="text-gray-400">June 2020 - April 2022</span>
                         </div>
