--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
                         Full Stack Developer & MERN
                     </h2>
                     <p class="mt-6 text-lg text-gray-300 max-w-2xl">
-                        Passionate about creating responsive, user-friendly websites with modern design principles and
-                        robust functionality.
+                        Dedicated to developing responsive, user-centric websites and Android applications, focusing on
+                        clean UI/UX, performance optimization, and scalable functionality.
                     </p>
                     <div class="mt-8 flex flex-wrap gap-4">
                         <a href="#contact"
