replaced my BIO with updated one

--- a/index.html
+++ b/index.html
@@ -308,20 +308,26 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 mt-10">
                 <div>
                     <p class="text-lg text-gray-300 mb-6">
-                        I am a passionate and creative BCA graduate with a solid foundation in web development and
-                        modern design principles. Now evolving as a Full Stack Developer and AI tool specialist, I bring
-                        a versatile skill set that blends frontend finesse with backend logic.
+                        I am a passionate and creative technology enthusiast currently pursuing my MSc in Information
+                        Systems with Computing at Dublin Business School, Ireland. With a strong academic and
+                        international learning background, I bring both global exposure and a deep understanding of
+                        modern computing concepts.
                     </p>
+
                     <p class="text-lg text-gray-300 mb-6">
-                        I have hands-on experience in building responsive, user-friendly websites that are both visually
-                        engaging and functionally robust. My expertise includes Firebase integration, payment gateway
-                        APIs, and real-time database handling, enabling me to develop secure and scalable web
-                        applications.
+                        With a solid foundation in web and application development, I specialize in building responsive,
+                        user-friendly, and performance-driven digital solutions. My experience spans across modern
+                        design principles, secure development practices, and scalable system implementation, along with
+                        hands-on expertise in Firebase, payment gateway APIs, and real-time database handling.
                     </p>
+
                     <p class="text-lg text-gray-300">
-                        With strong problem-solving abilities and a commitment to continuous learning, I stay updated
-                        with the latest web trends and technologies to craft meaningful digital experiences.
+                        As a continuously evolving Full Stack Developer and AI tool specialist, I blend creative
+                        frontend design with robust backend logic. With strong problem-solving skills and a commitment
+                        to staying updated with the latest technologies, I strive to craft impactful, meaningful, and
+                        innovative digital experiences.
                     </p>
+
                 </div>
                 <div class="bg-gray-800 rounded-xl p-8 border border-gray-700">
                     <h3 class="text-xl font-semibold text-text mb-4">Personal Info</h3>
