--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     <ul class="space-y-3">
                         <li class="flex items-start">
                             <span class="text-accent mr-3"><i class="fas fa-map-marker-alt"></i></span>
-                            <span class="text-gray-300">AT Kurukali TQ-Kagal, Kolhapur</span>
+                            <span class="text-gray-300">Dublin, Ireland</span>
                         </li>
                         <li class="flex items-start">
                             <span class="text-accent mr-3"><i class="fas fa-envelope"></i></span>
@@ -342,11 +342,11 @@
                         </li>
                         <li class="flex items-start">
                             <span class="text-accent mr-3"><i class="fas fa-phone"></i></span>
-                            <span class="text-gray-300">+91 9322108023</span>
+                            <span class="text-gray-300">+353 894628579, +91 9322108023</span>
                         </li>
                         <li class="flex items-start">
                             <span class="text-accent mr-3"><i class="fas fa-globe"></i></span>
-                            <span class="text-gray-300">pavanpatil8023.netlify.app</span>
+                            <span class="text-gray-300">https://pavanpatil8023.netlify.app/</span>
                         </li>
                         <li class="flex items-start">
                             <span class="text-accent mr-3"><i class="fas fa-language"></i></span>
