changed the experience with updated tech used..

--- a/index.html
+++ b/index.html
@@ -401,19 +401,29 @@
                             <span class="text-gray-400 mt-2 md:mt-0">July 2025 - October 2025</span>
                         </div>
                         <p class="mt-4 text-gray-300">
-                            Psyche Panacea is a business company founded in 2001 that previously used a WordPress site.
-                            During my internship, I developed a fully coded website using HTML, Tailwind CSS, Vanilla
-                            JavaScript, and REST APIs.
+                            Psyche Panacea is an established business organization that previously operated on a
+                            WordPress-based platform.
+                            During my internship, I transformed their digital presence by developing a fully
+                            custom-coded, high-performance
+                            website using HTML5, Tailwind CSS, Vanilla JavaScript, and REST APIs. The platform is now
+                            faster, more secure,
+                            visually engaging, and optimized for seamless user experiences across all devices.
                         </p>
+
                         <div class="mt-4">
                             <h4 class="font-semibold text-text">Key Contributions:</h4>
                             <ul class="mt-2 list-disc list-inside text-gray-300 space-y-1">
-                                <li>Developed a new website from scratch in just one month</li>
-                                <li>Created a faster, mobile-friendly, and more visually appealing site</li>
-                                <li>Maintained and updated the site, resolving bugs and improving functionality</li>
-                                <li>Used REST APIs to enhance interactivity and improve performance</li>
+                                <li>Engineered a fully responsive and modern website with clean UI/UX and optimized
+                                    performance</li>
+                                <li>Replaced the earlier WordPress site with a custom-coded, scalable, and maintainable
+                                    solution</li>
+                                <li>Implemented dynamic features and interactive components using Vanilla JavaScript and
+                                    REST APIs</li>
+                                <li>Enhanced site reliability, speed, security, and overall user engagement</li>
+                                <li>Handled continuous improvements, bug fixes, and feature enhancements</li>
                             </ul>
                         </div>
+
                     </div>
                 </div>
             </div>
