--- a/index.html
+++ b/index.html
@@ -456,17 +456,22 @@
                     <div class="bg-primary rounded-xl p-6 border border-gray-700">
                         <div class="flex justify-between items-start">
                             <div>
-                                <h3 class="text-xl font-bold text-text">Senior Secondary School</h3>
-                                <p class="text-accent font-medium">Devchand College Arjunnagar, Nipani</p>
+                                <h3 class="text-xl font-bold text-text">MSc Information Systems with Computing</h3>
+                                <p class="text-accent font-medium">Dublin Business School (DBS), Dublin, Ireland</p>
                             </div>
-                            <span class="text-gray-400">June 2020 - April 2022</span>
+                            <span class="text-gray-400">2024 - Present</span>
                         </div>
                         <p class="mt-4 text-gray-300">
-                            Completed Commerce with specialization in Information Technology. Developed foundational
-                            knowledge in business and technology integration.
+                            Currently pursuing a Master’s degree focused on advanced computing, modern application
+                            development,
+                            and enterprise technology solutions. Gained strong expertise in AWS cloud computing, data
+                            analytics,
+                            full-stack development, networking, databases, cybersecurity fundamentals, and real-world
+                            system implementation.
                         </p>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
