Re- arranged the skills section

--- a/index.html
+++ b/index.html
@@ -537,15 +537,19 @@
                 <div>
                     <h3 class="text-xl font-semibold text-text mb-6">Additional Skills</h3>
                     <div class="grid grid-cols-2 gap-4">
+
                         <div class="bg-secondary p-4 rounded-lg border border-gray-700">
                             <h4 class="font-semibold text-text mb-2">Frameworks & Libraries</h4>
                             <ul class="text-gray-300 space-y-1">
                                 <li>Tailwind CSS</li>
                                 <li>React.js</li>
+                                <li>Next.js</li>
                                 <li>Node.js</li>
                                 <li>Express.js</li>
+                                <li>Flutter</li>
                             </ul>
                         </div>
+
                         <div class="bg-secondary p-4 rounded-lg border border-gray-700">
                             <h4 class="font-semibold text-text mb-2">Tools & Platforms</h4>
                             <ul class="text-gray-300 space-y-1">
@@ -553,8 +557,11 @@
                                 <li>Firebase</li>
                                 <li>VS Code</li>
                                 <li>Canva</li>
+                                <li>Postman</li>
+                                <li>AWS (EC2 / S3 Basics)</li>
                             </ul>
                         </div>
+
                         <div class="bg-secondary p-4 rounded-lg border border-gray-700">
                             <h4 class="font-semibold text-text mb-2">Database</h4>
                             <ul class="text-gray-300 space-y-1">
@@ -563,14 +570,19 @@
                                 <li>Firestore</li>
                             </ul>
                         </div>
+
                         <div class="bg-secondary p-4 rounded-lg border border-gray-700">
                             <h4 class="font-semibold text-text mb-2">Other Skills</h4>
                             <ul class="text-gray-300 space-y-1">
                                 <li>REST APIs</li>
-                                <li>Payment Gateway</li>
+                                <li>Payment Gateway Integration</li>
                                 <li>Responsive Design</li>
+                                <li>Real-Time Applications</li>
+                                <li>Application Development</li>
+                                <li>Data Analytics Basics</li>
                             </ul>
                         </div>
+
                     </div>
 
                     <div class="mt-8">
@@ -589,6 +601,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
