--- a/index.html
+++ b/index.html
@@ -634,6 +634,13 @@
                             <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">MongoDB</span>
                             <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Payment Gateway</span>
                         </div>
+                        <div class="mt-6">
+                            <a href="https://sporteligibilityplatform.kesug.com/" target="_blank"
+                                rel="noopener noreferrer"
+                                class="inline-block px-5 py-2 bg-accent text-black font-semibold rounded-lg hover:opacity-80 transition">
+                                View Project
+                            </a>
+                        </div>
                     </div>
                 </div>
 
@@ -661,35 +668,61 @@
                             <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Tailwind CSS</span>
                             <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">REST API</span>
                         </div>
+                        <div class="mt-6">
+                            <a href="https://aviatoempower.netlify.app/" target="_blank" rel="noopener noreferrer"
+                                class="inline-block px-5 py-2 bg-accent text-black font-semibold rounded-lg hover:opacity-80 transition">
+                                View Project
+                            </a>
+                        </div>
                     </div>
                 </div>
 
                 <!-- Project 3 -->
                 <div class="project-card bg-primary rounded-xl overflow-hidden border border-gray-700">
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-text">Travel Expense Tracker</h3>
-                        <p class="text-accent mt-1">Personal Project</p>
+                        <h3 class="text-xl font-bold text-text">MindMapr</h3>
+                        <p class="text-accent mt-1">DBS – Final Academic Project</p>
+
                         <p class="text-gray-300 mt-4">
-                            A real-time trip and expense management tool for travelers, allowing users to add multiple
-                            trips and track live expenses throughout their journey.
+                            MindMapr is a Q&A platform designed for programmers and coders where users can post
+                            questions,
+                            answer others, and collaborate efficiently. It is a complete CRUD-based platform with
+                            real-time
+                            functionality and secure backend integration.
                         </p>
+
                         <div class="mt-6">
                             <h4 class="font-semibold text-text">Features:</h4>
                             <ul class="mt-2 text-gray-300 list-disc list-inside space-y-1">
-                                <li>Real-time expense tracking</li>
-                                <li>Multiple trip management</li>
-                                <li>Live currency conversion</li>
-                                <li>Session-based data storage</li>
+                                <li>Q&A Posting and Answer System (CRUD Functionalities)</li>
+                                <li>User Authentication & Secure Access</li>
+                                <li>Real-time Active Users Display on Dashboard</li>
+                                <li>Responsive UI with optimized performance</li>
                             </ul>
                         </div>
+
                         <div class="mt-6 flex flex-wrap gap-2">
-                            <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">JavaScript</span>
-                            <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Firebase</span>
-                            <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Currency API</span>
-                            <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Real-time DB</span>
+                            <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">HTML5</span>
+                            <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Vanilla JavaScript</span>
+                            <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Tailwind CSS</span>
+                            <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Node.js</span>
+                            <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Express.js</span>
+                            <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">CORS</span>
+                            <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">MongoDB</span>
+                            <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Firestore</span>
+                            <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Realtime Firestore
+                                DB</span>
+                        </div>
+
+                        <div class="mt-6">
+                            <a href="https://mindmapr.netlify.app/" target="_blank" rel="noopener noreferrer"
+                                class="inline-block px-5 py-2 bg-accent text-black font-semibold rounded-lg hover:opacity-80 transition">
+                                View Project
+                            </a>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
