All projects sorted in grid and added remaining one.

--- a/index.html
+++ b/index.html
@@ -609,32 +609,38 @@
     <section id="projects" class="py-20 bg-secondary">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <h2 class="text-3xl font-bold text-text section-title">Projects</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-10">
+
+            <!-- Wider Layout (Cards are bigger width now) -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8 mt-10">
+
                 <!-- Project 1 -->
                 <div class="project-card bg-primary rounded-xl overflow-hidden border border-gray-700">
-                    <div class="p-6">
+                    <div class="p-4">
                         <h3 class="text-xl font-bold text-text">Sports Eligibility Platform</h3>
                         <p class="text-accent mt-1">College Project</p>
-                        <p class="text-gray-300 mt-4">
+                        <p class="text-gray-300 mt-3">
                             A system where athletes can check their eligibility status by making a one-time payment.
                             Once logged in, users can explore details of coaches from 22 Indian states.
                         </p>
-                        <div class="mt-6">
+
+                        <div class="mt-4">
                             <h4 class="font-semibold text-text">Features:</h4>
-                            <ul class="mt-2 text-gray-300 list-disc list-inside space-y-1">
+                            <ul class="mt-1 text-gray-300 list-disc list-inside space-y-1">
                                 <li>One-time payment system</li>
                                 <li>Coach database with contact details</li>
                                 <li>State-wise categorization</li>
                                 <li>Session-based access</li>
                             </ul>
                         </div>
-                        <div class="mt-6 flex flex-wrap gap-2">
+
+                        <div class="mt-4 flex flex-wrap gap-2">
                             <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">React</span>
                             <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Node.js</span>
                             <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">MongoDB</span>
                             <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Payment Gateway</span>
                         </div>
-                        <div class="mt-6">
+
+                        <div class="mt-4">
                             <a href="https://sporteligibilityplatform.kesug.com/" target="_blank"
                                 rel="noopener noreferrer"
                                 class="inline-block px-5 py-2 bg-accent text-black font-semibold rounded-lg hover:opacity-80 transition">
@@ -646,29 +652,32 @@
 
                 <!-- Project 2 -->
                 <div class="project-card bg-primary rounded-xl overflow-hidden border border-gray-700">
-                    <div class="p-6">
+                    <div class="p-4">
                         <h3 class="text-xl font-bold text-text">Women's Empowerment Portal</h3>
                         <p class="text-accent mt-1">Hackathon Project</p>
-                        <p class="text-gray-300 mt-4">
+                        <p class="text-gray-300 mt-3">
                             Developed during a national-level hackathon, this platform empowers women to create personal
                             stores, build professional profiles, join communities, and explore job opportunities.
                         </p>
-                        <div class="mt-6">
+
+                        <div class="mt-4">
                             <h4 class="font-semibold text-text">Features:</h4>
-                            <ul class="mt-2 text-gray-300 list-disc list-inside space-y-1">
+                            <ul class="mt-1 text-gray-300 list-disc list-inside space-y-1">
                                 <li>E-commerce store creation</li>
                                 <li>Professional profile building</li>
                                 <li>Community forums</li>
                                 <li>Job board integration</li>
                             </ul>
                         </div>
-                        <div class="mt-6 flex flex-wrap gap-2">
+
+                        <div class="mt-4 flex flex-wrap gap-2">
                             <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">React</span>
                             <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Firebase</span>
                             <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Tailwind CSS</span>
                             <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">REST API</span>
                         </div>
-                        <div class="mt-6">
+
+                        <div class="mt-4">
                             <a href="https://aviatoempower.netlify.app/" target="_blank" rel="noopener noreferrer"
                                 class="inline-block px-5 py-2 bg-accent text-black font-semibold rounded-lg hover:opacity-80 transition">
                                 View Project
@@ -679,11 +688,11 @@
 
                 <!-- Project 3 -->
                 <div class="project-card bg-primary rounded-xl overflow-hidden border border-gray-700">
-                    <div class="p-6">
+                    <div class="p-4">
                         <h3 class="text-xl font-bold text-text">MindMapr</h3>
                         <p class="text-accent mt-1">DBS – Final Academic Project</p>
 
-                        <p class="text-gray-300 mt-4">
+                        <p class="text-gray-300 mt-3">
                             MindMapr is a Q&A platform designed for programmers and coders where users can post
                             questions,
                             answer others, and collaborate efficiently. It is a complete CRUD-based platform with
@@ -691,9 +700,9 @@
                             functionality and secure backend integration.
                         </p>
 
-                        <div class="mt-6">
+                        <div class="mt-4">
                             <h4 class="font-semibold text-text">Features:</h4>
-                            <ul class="mt-2 text-gray-300 list-disc list-inside space-y-1">
+                            <ul class="mt-1 text-gray-300 list-disc list-inside space-y-1">
                                 <li>Q&A Posting and Answer System (CRUD Functionalities)</li>
                                 <li>User Authentication & Secure Access</li>
                                 <li>Real-time Active Users Display on Dashboard</li>
@@ -701,7 +710,7 @@
                             </ul>
                         </div>
 
-                        <div class="mt-6 flex flex-wrap gap-2">
+                        <div class="mt-4 flex flex-wrap gap-2">
                             <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">HTML5</span>
                             <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Vanilla JavaScript</span>
                             <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Tailwind CSS</span>
@@ -714,8 +723,45 @@
                                 DB</span>
                         </div>
 
-                        <div class="mt-6">
+                        <div class="mt-4">
                             <a href="https://mindmapr.netlify.app/" target="_blank" rel="noopener noreferrer"
+                                class="inline-block px-5 py-2 bg-accent text-black font-semibold rounded-lg hover:opacity-80 transition">
+                                View Project
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project 4 -->
+                <div class="project-card bg-primary rounded-xl overflow-hidden border border-gray-700">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold text-text">Travel Expense Tracker</h3>
+                        <p class="text-accent mt-1">Personal Project</p>
+
+                        <p class="text-gray-300 mt-3">
+                            A real-time travel budget and expense management application that allows users to
+                            create trips, manage spending, and monitor expenses throughout their journey with
+                            dynamic updates and user-friendly UI.
+                        </p>
+
+                        <div class="mt-4">
+                            <h4 class="font-semibold text-text">Features:</h4>
+                            <ul class="mt-1 text-gray-300 list-disc list-inside space-y-1">
+                                <li>Live expense calculation</li>
+                                <li>Multiple trip management</li>
+                                <li>Live currency conversion support</li>
+                                <li>Session-based data storage</li>
+                            </ul>
+                        </div>
+
+                        <div class="mt-4 flex flex-wrap gap-2">
+                            <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">JavaScript</span>
+                            <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Firebase</span>
+                            <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Currency API</span>
+                            <span class="px-3 py-1 bg-gray-800 text-text rounded-full text-sm">Realtime DB</span>
+                        </div>
+
+                        <div class="mt-4">
+                            <a href="https://travelexpense.netlify.app/" target="_blank" rel="noopener noreferrer"
                                 class="inline-block px-5 py-2 bg-accent text-black font-semibold rounded-lg hover:opacity-80 transition">
                                 View Project
                             </a>
@@ -726,6 +772,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- Achievements Section -->
     <section class="py-20 bg-primary">
