--- a/index.html
+++ b/index.html
@@ -778,7 +778,10 @@
     <section class="py-20 bg-primary">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <h2 class="text-3xl font-bold text-text section-title">Achievements</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-10">
+
+            <!-- 1 Column Grid -->
+            <div class="grid grid-cols-1 gap-8 mt-10">
+
                 <div class="bg-secondary rounded-xl p-6 border border-gray-700">
                     <div class="flex items-start">
                         <div class="bg-accent/10 p-3 rounded-lg mr-4">
@@ -793,6 +796,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="bg-secondary rounded-xl p-6 border border-gray-700">
                     <div class="flex items-start">
                         <div class="bg-accent/10 p-3 rounded-lg mr-4">
@@ -807,6 +811,24 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="bg-secondary rounded-xl p-6 border border-gray-700">
+                    <div class="flex items-start">
+                        <div class="bg-accent/10 p-3 rounded-lg mr-4">
+                            <i class="fas fa-trophy text-accent text-2xl"></i>
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-bold text-text">Tutedude National Hackathon</h3>
+                            <p class="text-gray-300 mt-2">
+                                Achieved <strong>2nd Runner Up</strong> position in Tutedude National Level Hackathon,
+                                competing among <strong>1500+ teams across India</strong>. Participated as a team of
+                                three,
+                                delivering an innovative and technically strong project solution.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="bg-secondary rounded-xl p-6 border border-gray-700">
                     <div class="flex items-start">
                         <div class="bg-accent/10 p-3 rounded-lg mr-4">
@@ -821,22 +843,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="bg-secondary rounded-xl p-6 border border-gray-700">
-                    <div class="flex items-start">
-                        <div class="bg-accent/10 p-3 rounded-lg mr-4">
-                            <i class="fas fa-globe text-accent text-2xl"></i>
-                        </div>
-                        <div>
-                            <h3 class="text-xl font-bold text-text">English Proficiency</h3>
-                            <p class="text-gray-300 mt-2">
-                                Certified in English proficiency with a Duolingo English Test (DET) score of 105/160.
-                            </p>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
     </section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="py-20 bg-secondary">
