--- a/index.html
+++ b/index.html
@@ -856,8 +856,10 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 mt-10">
                 <div>
                     <p class="text-lg text-gray-300 mb-8">
-                        I'm currently available for freelance work and full-time opportunities. If you have a project
-                        that you want to get started or think you need my help with something, then get in touch.
+                        I'm currently available for freelance or full-time opportunities,I’d be happy to guide,
+                        mentor, or assist you with your projects, ideas, or technical challenges. Feel free to reach out
+                        if you need support or direction.
+
                     </p>
                     <div class="space-y-6">
                         <div class="flex items-start">
@@ -866,7 +868,7 @@
                             </div>
                             <div>
                                 <h3 class="text-lg font-semibold text-text">Location</h3>
-                                <p class="text-gray-300 mt-1">AT Kurukali TQ-Kagal, Kolhapur</p>
+                                <p class="text-gray-300 mt-1">Dublin, Ireland</p>
                             </div>
                         </div>
                         <div class="flex items-start">
@@ -884,7 +886,7 @@
                             </div>
                             <div>
                                 <h3 class="text-lg font-semibold text-text">Phone</h3>
-                                <p class="text-gray-300 mt-1">+91 9322108023</p>
+                                <p class="text-gray-300 mt-1">+353 894628579, +91 9322108023</p>
                             </div>
                         </div>
                     </div>
