--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                         </li>
                         <li class="flex items-start">
                             <span class="text-accent mr-3"><i class="fas fa-globe"></i></span>
-                            <span class="text-gray-300">https://pavanpatil8023.netlify.app/</span>
+                            <span class="text-gray-300"><a target="_blank" href="https://pavanpatil8023.netlify.app/">https://pavanpatil8023.netlify.app/</a></span>
                         </li>
                         <li class="flex items-start">
                             <span class="text-accent mr-3"><i class="fas fa-language"></i></span>
@@ -459,14 +459,14 @@
                                 <h3 class="text-xl font-bold text-text">MSc Information Systems with Computing</h3>
                                 <p class="text-accent font-medium">Dublin Business School (DBS), Dublin, Ireland</p>
                             </div>
-                            <span class="text-gray-400">2024 - Present</span>
+                            <span class="text-gray-400">Sept 2025 - Sept 2026</span>
                         </div>
                         <p class="mt-4 text-gray-300">
                             Currently pursuing a Master’s degree focused on advanced computing, modern application
                             development,
-                            and enterprise technology solutions. Gained strong expertise in AWS cloud computing, data
+                            and enterprise technology solutions. Gained Knowledge in AWS cloud computing, data
                             analytics,
-                            full-stack development, networking, databases, cybersecurity fundamentals, and real-world
+                            full-stack development, networking, databases, Research Methods, and real-world
                             system implementation.
                         </p>
                     </div>
