--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         clean UI/UX, performance optimization, and scalable functionality.
                     </p>
                     <div class="mt-8 flex flex-wrap gap-4">
-                        <a href="#contact"
+                        <a href="callto:+353894628579"
                             class="px-6 py-3 bg-accent text-white rounded-lg font-medium hover:bg-blue-500 transition duration-300">
                             Contact Me
                         </a>
@@ -274,7 +274,7 @@
                             class="text-gray-300 hover:text-accent transition duration-300">
                             <i class="fas fa-envelope text-xl"></i>
                         </a>
-                        <a href="tel:+919322108023" class="text-gray-300 hover:text-accent transition duration-300">
+                        <a href="tel:+353894628579" class="text-gray-300 hover:text-accent transition duration-300">
                             <i class="fas fa-phone text-xl"></i>
                         </a>
                         <a href="https://github.com/Pavan8023"
